# strawberry-demo

./: Makefile  README.md  pyproject.toml
strawberry_demo/: Makefile  schema.py
