[tool.poetry]
name = "strawberry-demo"
version = "0.1.0"
description = ""
authors = ["Jason Walsh <jwalsh1@chewy.com>"]

[tool.poetry.dependencies]
python = "^3.7"
strawberry-graphql = {extras = ["debug-server"], version = "^0.102.2"}
localstack = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
